--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "react-scripts": "1.1.5"
     },
     "scripts": {
-        "start": "nodemon src/server/index.js",
+        "start": "nodemon server/index.js",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
